[package]
name = "rust-full-stack"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

# Serde /json
serde = { version = "1.0.219", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.140", features = [
    "alloc",
    "indexmap",
    "arbitrary_precision",
] }

# Axum
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
lazy-regex = "3.4.1"
strum_macros = "0.27.1"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
serde_with = "3.12.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.7.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }
anyhow = "1.0.97"
serial_test = "3.2.0"
sqlb = "0.4.0"
rand = "0.9.0"
hmac = "0.12.1"
sha2 = "0.10.8"
base64-url = "3.0.0"
time = "0.3.41"


[dev-dependencies]
httpc-test = "0.1.1"
serial_test = "3.2.0"
